src/style.css
/* =============================== */

/* =========Style reset=========== */

/* =============================== */
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap");

@font-face {
  font-family: NierFont;
  src:
    url("./font/nier.woff2") format("woff2"),
    url("./font/nier.woff") format("woff");
  font-weight: 600;
  font-style: normal;
}

:root {
  --bg-color-body: #d1cdb7;
  --bg-color-button: bab5a1;
  --bg-color-list: #fff;
  --color-title: #434346;
  --color-warning: #d25d47;
  --bg-color-active: #454138;
}

* {
  box-sizing: border-box;
}

html {
  margin: 0;
  padding: 0;
}

body {
  margin: 0;
  padding: 30vh 0 20vh;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  font-family: Inter, sans-serif;
  background-color: var(--bg-color-body);
  opacity: 0.8;
  background-image:
    linear-gradient(
      #ccc8b1 1px,
      transparent 1px
    ),
    linear-gradient(to right, #ccc8b1 1px, #d1cdb7 1px);
  background-size: 6px 6px;
  box-shadow:
    rgb(50 50 93 / 25%) 0 20px 40px -12px inset,
    rgb(0 0 0 / 30%) 0 18px 18px -18px inset;
}

a,
a:link,
a:visited,
a:hover,
a:active {
  text-decoration: none;
  font-weight: normal;
  color: var(--shark);
  cursor: pointer;
}

ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

button {
  background: none;
  color: inherit;
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  outline: inherit;
}

h1 {
  padding: 0;
  margin: 0;
}

/* =============================== */

/* =========Card styling========== */

/* =============================== */

main {
  width: 500px;
  display: grid;
  grid-template-columns: auto;
  grid-template-rows: 48px 48px auto 72px;
  box-shadow: rgb(0 0 0 / 35%) 0 5px 15px;
  background-color: var(--bg-color-list);
  border-radius: 6px;
}

.title-section {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: 12px;
  color: var(--color-title);
  border-bottom: 1px solid lightgrey;
}

.title-section h1 {
  text-align: left;
  font-family: NierFont, sans-serif;
  font-size: 24px;
  font-weight: 700;
  text-shadow: 2px 2px 0 #bab5a1;
}

.title-section .icon {
  font-size: 12px;
  font-weight: 700;
  padding: 6px;
}

.input-section {
  position: relative;
  width: 100%;
  height: 100%;
}

.input-section input {
  text-align: left;
  font-size: 16px;
  font-weight: 400;
  height: 100%;
  width: 100%;
  border-left: none;
  border-right: none;
  border-top: 1px solid transparent;
  border-bottom: 1px solid transparent;
  padding: 6px 32px 6px 12px;
}

.input-section .icon {
  position: absolute;
  right: 12px;
  text-align: left;
  font-size: 12px;
  font-weight: 600;
  height: 100%;
  padding: 6px;
  z-index: 2;
}

.to-do-list {
  display: grid;
  grid-template-columns: 100%;
}

.task {
  position: relative;
  height: 48px;
  display: grid;
  grid-template-columns: 48px auto 48px;
  grid-template-rows: 48px;
  border-top: 1px solid lightgrey;
  align-items: center;
}

.task input[type="checkbox"] {
  display: block;
  align-self: center;
  justify-self: center;
  height: 30%;
  width: 30%;
  margin: 30%;
}

.task input[type="text"] {
  display: block;
  align-self: center;
  justify-self: center;
  outline: none;
  border: none;
  height: 100%;
  width: 100%;
  padding: 6px;
  text-align: left;
  font-size: 16px;
  font-weight: 400;
}

.task input[type="text"]:focus {
  display: block;
  align-self: center;
  justify-self: center;
  border: 2px solid var(--bg-color-active);
  background-color: var(--bg-color-body);
}

.task .icon {
  font-size: 12px;
  font-weight: 700;
  padding: 6px;
  width: 100%;
  height: 100%;
}

.task .delete-button {
  grid-column: 3/4;
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  height: 40%;
  width: 40%;
  margin: 25% 30%;
  transition: z-index 0.7s step-end;
}

.task .move-button {
  grid-column: 3/4;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  height: 40%;
  width: 40%;
  margin: 25% 35%;
  transition: z-index 0.7s step-end;
}

.clear-button {
  position: relative;
  font-size: 18px;
  font-weight: 500;
  background:
    linear-gradient(
      to left,
      var(--bg-color-list) 50%,
      var(--bg-color-active) 50%
    );
  background-size: 200% 100%;
  background-position: right center;
  border-top: 1px solid lightgrey;
}

.clear-button::before {
  position: absolute;
  width: 100%;
  height: 80%;
  top: 5%;
  left: 0;
  border-top: 3px solid var(--bg-color-list);
  border-bottom: 3px solid var(--bg-color-list);
  content: "";
}

.clear-button:hover {
  color: var(--bg-color-list);
  background-position: left center;
  transition: all;
  transition-timing-function: ease-in-out;
  transition-duration: 200ms;
}

.input-section input:focus {
  outline: none;
  border-left: none;
  border-right: none;
  border-top: 1px solid var(--bg-color-active);
  border-bottom: 1px solid var(--bg-color-active);
}

.task .delete-button:hover {
  color: var(--color-warning);
}

